# pybind11-example

./: CMakeLists.txt  readme.md
bindings/: bindings.cpp
